--- a/react-ts-chakra-todo/package.json
+++ b/react-ts-chakra-todo/package.json
@@ -46,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.28.0",
+    "prettier": "2.3.1"
   }
 }
