--- a/twitter-clone-fb/package.json
+++ b/twitter-clone-fb/package.json
@@ -12,10 +12,12 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "save": "^2.4.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
