--- a/next-sample/package.json
+++ b/next-sample/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.21.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.4.1",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
