--- a/next-sample/package.json
+++ b/next-sample/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "next": "11.1.0",
+    "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "recoil": "^0.4.1"
