--- a/redux-sample-app/package.json
+++ b/redux-sample-app/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/redux-thunk": "^2.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
+    "@types/react-redux": "^7.1.19",
     "autoprefixer": "^10.3.7",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.9",
     "prettier": "2.4.1",
+    "redux-devtools": "^3.7.0",
     "tailwindcss": "^2.2.17",
     "typescript": "4.4.4"
   }
