--- a/redux-sample-app/package.json
+++ b/redux-sample-app/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/redux-thunk": "^2.1.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.2"
@@ -22,6 +23,8 @@
   "devDependencies": {
     "@types/react": "17.0.30",
     "@types/react-redux": "^7.1.19",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-thunk": "^2.1.0",
     "autoprefixer": "^10.3.7",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
