--- a/next-sample/package.json
+++ b/next-sample/package.json
@@ -19,8 +19,13 @@
     "save": "^2.4.0"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^5.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^26.0.23",
     "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.19",
+    "jest": "^26.6.3",
+    "jest-mock-axios": "^4.4.0",
     "autoprefixer": "^10.3.3",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.0",
@@ -29,5 +34,27 @@
     "prettier": "2.3.2",
     "tailwindcss": "^2.2.8",
     "typescript": "4.4.2"
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.jest.json"
+      }
+    },
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "src/**/*.tsx"
+    ]
   }
 }
