--- a/tora-redux/package.json
+++ b/tora-redux/package.json
@@ -18,6 +18,7 @@
     "@types/react": "17.0.33",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
+    "prettier": "2.4.1",
     "typescript": "4.4.4"
   }
 }
