--- a/redux-todoapp/package.json
+++ b/redux-todoapp/package.json
@@ -12,11 +12,13 @@
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
+    "@types/react-redux": "^7.1.20",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
     "prettier": "2.4.1",
