--- a/redux-todoapp/package.json
+++ b/redux-todoapp/package.json
@@ -13,15 +13,20 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "@types/react-redux": "^7.1.20",
+    "@types/redux-thunk": "^2.1.0",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
     "prettier": "2.4.1",
+    "redux-devtools": "^3.7.0",
     "typescript": "4.4.4"
   }
 }
