--- a/modal-app/package.json
+++ b/modal-app/package.json
@@ -10,11 +10,17 @@
   "dependencies": {
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux-thunk": "^2.1.0",
+    "redux-devtools": "^3.7.0",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
     "prettier": "2.4.1",
