--- a/swr-qiitaaip/package.json
+++ b/swr-qiitaaip/package.json
@@ -18,6 +18,7 @@
     "@types/react": "17.0.24",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "prettier": "^2.4.1",
     "typescript": "4.4.3"
   }
 }
