--- a/next-sample/package.json
+++ b/next-sample/package.json
@@ -12,10 +12,16 @@
     "axios": "^0.21.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "@types/node": "16.11.6",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux-thunk": "^2.1.0",
     "autoprefixer": "^10.3.3",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.0",
@@ -23,6 +29,7 @@
     "postcss": "^8.3.6",
     "prettier": "2.3.2",
     "tailwindcss": "^2.2.8",
+    "redux-devtools": "^3.7.0",
     "typescript": "4.4.2"
   }
 }
