--- a/debounce-form-sample/package.json
+++ b/debounce-form-sample/package.json
@@ -19,6 +19,7 @@
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "postcss": "^8.4.4",
+    "prettier": "2.5.0",
     "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   }
