--- a/debounce-form-sample/package.json
+++ b/debounce-form-sample/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.24.0",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
