--- a/techpit-redux-kanban/package.json
+++ b/techpit-redux-kanban/package.json
@@ -1,9 +1,17 @@
 {
  "scripts": {
   "start": "parcel ./src/index.html",
-  "build": "parcel build ./src/index.html"
+  "build": "parcel build ./src/index.html",
+  "tsc": "tsc"
+ },
+ "dependencies": {
+  "react": "^17.0.2",
+  "react-dom": "^17.0.2"
  },
  "devDependencies": {
-  "parcel-bundler": "1.12.3"
+  "@types/react": "^17.0.38",
+  "@types/react-dom": "^17.0.11",
+  "parcel-bundler": "1.12.3",
+  "typescript": "^4.5.4"
  }
 }
