--- a/techpit-redux-kanban/package.json
+++ b/techpit-redux-kanban/package.json
@@ -2,7 +2,8 @@
  "scripts": {
   "start": "parcel ./src/index.html",
   "build": "parcel build ./src/index.html",
-  "tsc": "tsc"
+  "tsc": "tsc",
+  "format": "prettier --write \"./src/**/*.{ts,tsx}\""
  },
  "dependencies": {
   "react": "^17.0.2",
@@ -12,6 +13,7 @@
   "@types/react": "^17.0.38",
   "@types/react-dom": "^17.0.11",
   "parcel-bundler": "1.12.3",
+  "prettier": "^2.5.1",
   "typescript": "^4.5.4"
  }
 }
