--- a/techpit-redux-kanban/package.json
+++ b/techpit-redux-kanban/package.json
@@ -7,11 +7,13 @@
  },
  "dependencies": {
   "react": "^17.0.2",
-  "react-dom": "^17.0.2"
+  "react-dom": "^17.0.2",
+  "styled-components": "^5.3.3"
  },
  "devDependencies": {
   "@types/react": "^17.0.38",
   "@types/react-dom": "^17.0.11",
+  "@types/styled-components": "^5.1.19",
   "parcel-bundler": "1.12.3",
   "prettier": "^2.5.1",
   "typescript": "^4.5.4"
