ESLintをプロジェクトにインストール

--- a/techpit-redux-kanban/package.json
+++ b/techpit-redux-kanban/package.json
@@ -16,6 +16,11 @@
   "@types/react": "^17.0.38",
   "@types/react-dom": "^17.0.11",
   "@types/styled-components": "^5.1.19",
+  "@typescript-eslint/eslint-plugin": "^5.9.1",
+  "@typescript-eslint/parser": "^5.9.1",
+  "eslint": "^8.6.0",
+  "eslint-plugin-react": "^7.28.0",
+  "eslint-plugin-react-hooks": "^4.3.0",
   "json-server": "^0.17.0",
   "parcel-bundler": "1.12.3",
   "prettier": "^2.5.1",
