.eslintrc.json を作成して、ESLintを利用可能にした

--- a/techpit-redux-kanban/package.json
+++ b/techpit-redux-kanban/package.json
@@ -4,7 +4,8 @@
   "start-api": "json-server --watch ./api/db.json --middlewares ./api/middlewares",
   "build": "parcel build ./src/index.html",
   "tsc": "tsc",
-  "format": "prettier --write \"./src/**/*.{ts,tsx}\""
+  "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
+  "lint": "eslint \"./src/**/*.{ts,tsx}\""
  },
  "dependencies": {
   "immer": "^9.0.7",
