--- a/styled-component-pra/package.json
+++ b/styled-component-pra/package.json
@@ -8,15 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.21",
+    "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
+    "prettier": "2.5.1",
     "typescript": "4.5.5"
   }
 }
