--- a/otamesiproject/package.json
+++ b/otamesiproject/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
+    "swr": "^2.0.3",
     "typescript": "4.9.5"
   }
 }
