--- a/otamesiproject/package.json
+++ b/otamesiproject/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@another_works/react-landscape": "^1.0.19",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -21,5 +22,8 @@
     "styled-components": "^5.3.6",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
