--- a/otamesiproject/package.json
+++ b/otamesiproject/package.json
@@ -11,19 +11,22 @@
   "dependencies": {
     "@another_works/react-landscape": "^1.0.19",
     "@next/font": "13.1.6",
-    "@types/node": "18.14.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "axios": "^1.3.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
-    "swr": "^2.0.3",
-    "typescript": "4.9.5"
+    "styled-reset": "^4.4.5",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/node": "18.14.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/styled-components": "^5.1.26",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "prettier": "^2.8.4",
+    "typescript": "4.9.5"
   }
 }
