--- a/otamesiproject/package.json
+++ b/otamesiproject/package.json
@@ -20,13 +20,21 @@
     "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@types/node": "18.16.18",
+    "@ianvs/prettier-plugin-sort-imports": "4.0.0-beta.0",
+    "@types/node": "20.2.3",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/parser": "^5.59.6",
+    "autoprefixer": "10.4.14",
     "eslint": "8.34.0",
     "eslint-config-next": "13.4.6",
-    "prettier": "^2.8.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-tailwindcss": "^3.12.0",
+    "postcss": "8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
 }
